add riders swagger and routes
